Add alt attribute to the logo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ nav_hide: true
     	<div class="hero-unit">
         <div class="media">
       <p class="pull-left">
-        	<img src="https://s3.amazonaws.com/media.jetstrap.com/K9EQM129TDe09W1t98i2_K-9_Mail_512x512.png" height="200" width="200">
+        	<img src="https://s3.amazonaws.com/media.jetstrap.com/K9EQM129TDe09W1t98i2_K-9_Mail_512x512.png" height="200" width="200" alt="K-9, the robot dog">
       </p>
       <div class="media-body">
         	<h1>
