--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ nav_hide: true
       </p>
       <div class="media-body">
         	<h1>
-    			Advanced Emailing for Android
+    			Advanced Email for Android
     		</h1>
     		<p>
     			<span style="color: inherit;">
