--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@ nav_hide: true
       </div>
     </div>
     	</div>
+	<div class="row">    		
+		<div class="span4">
+			<h2>Blog Posts</h2>
+			<ul>
+			  {% for post in site.posts %}
+			    <li>
+			      <a href="{{ post.url }}">{{ post.title }}</a><br />
+			     {{ post.excerpt }}
+			    </li>
+			  {% endfor %}
+			</ul>
+		</div>
+	</div>
     	<!-- Example row of columns -->
     	<div class="row">
     		<div class="span4">
