Expanded blog-post on K-9 Developer Meet-up

--- a/_posts/2016-11-5-K9 Developer Meetup.html
+++ b/_posts/2016-11-5-K9 Developer Meetup.html
@@ -6,10 +6,21 @@ excerpt: Developer meet-up at <a href="https://c-base.org/">c-base</a>.
 
 <h2>K-9 Developer Meet-up</h2>
 
-<p>Developer meet-up at <a href="https://c-base.org/">c-base</a>.</p>
+<div style="float:right; margin-left: 10px">
+  <img src="/assets/2007-07-28-berlin-130.jpg" alt="Main hall of c-base" />
+</div>
 
-<p>Attendees:</p>
+<p>There was a developer meet-up <a href="https://c-base.org/">c-base</a> on 4th November.</p>
 
-<ul>
-<li>philipwhiuk</li>
-<li>cketti</li>
+<p>As an internationally diverse team, K-9 members do not often meet-up physically, 
+  mostly using remote working tools to organise the project. However schedules meant that 
+  <a href="http://www.github.com/cketti">cketti</a> and <a href="http://www.github.com/philipwhiuk">philipwhiuk</a> 
+  were able to arrange a meet-up in Berlin this week - following on from previous meet-ups and hackathons between cketti 
+  and <a href="http://www.github.com/Valodim">Valodim</a> earlier this year.</p>
+
+<p>The host organisation, <strong>c-base</strong> provides a group space for computer software, hardware and networking 
+  and has previously hosted events for organisations like the Chaos Computer Club, Wikipedia and the Freifung wireless community.</p>
+
+<p style="font-size:smaller">Photo by Ralf Roletschek (marcela), 
+  <a href="http://creativecommons.org/licenses/by-sa/3.0" title="Creative Commons Attribution-Share Alike 3.0">CC BY-SA 3.0</a>, 
+  <a href="https://commons.wikimedia.org/w/index.php?curid=2951445">Link</a></p>
