--- a/index.html
+++ b/index.html
@@ -26,14 +26,16 @@ nav_hide: true
 	<div class="row">    		
 		<div class="span4">
 			<h2>Blog Posts</h2>
-			<ul>
 			  {% for post in site.posts %}
-			    <li>
-			      <a href="{{ post.url }}">{{ post.title }}</a><br />
-			     {{ post.excerpt }}
-			    </li>
+			<div class="media">
+			  <div class="media-left">
+			  </div>
+			  <div class="media-body">
+			    <h4 class="media-heading"><a href="{{ post.url }}">{{ post.title }}</a></h4>
+			    {{ post.excerpt }}
+			  </div>
+			</div>
 			  {% endfor %}
-			</ul>
 		</div>
 	</div>
     	<!-- Example row of columns -->
