--- a/_posts/2016-11-5-K9 Developer Meetup.html
+++ b/_posts/2016-11-5-K9 Developer Meetup.html
@@ -5,6 +5,7 @@ excerpt: Developer meet-up at <a href="https://c-base.org/">c-base</a>.
 {% include header.html %}
 
 <h2>K-9 Developer Meet-up</h2>
+<div class="postedInfo">Posted by <a href="https://github.com/philipwhiuk">philipwhiuk</a> on November 5th 2016.</div>
 
 <div style="float:right; margin-left: 10px">
   <img src="/assets/2007-07-28-berlin-130.jpg" alt="Main hall of c-base" />
