--- a/_posts/2016-11-5-K9 Developer Meetup.html
+++ b/_posts/2016-11-5-K9 Developer Meetup.html
@@ -1,11 +1,9 @@
 ---
-title: Developer Meet-up
+title: K-9 Developer Meet-up
 excerpt: Developer meet-up at <a href="https://c-base.org/">c-base</a>.
+author: philipwhiuk
+layout: post
 ---
-{% include header.html %}
-
-<h2>K-9 Developer Meet-up</h2>
-<div class="postedInfo">Posted by <a href="https://github.com/philipwhiuk">philipwhiuk</a> on November 5th 2016.</div>
 
 <div style="float:right; margin-left: 10px">
   <img src="/assets/2007-07-28-berlin-130.jpg" alt="Main hall of c-base" />
@@ -13,15 +11,15 @@ excerpt: Developer meet-up at <a href="https://c-base.org/">c-base</a>.
 
 <p>There was a developer meet-up <a href="https://c-base.org/">c-base</a> on 4th November.</p>
 
-<p>As an internationally diverse team, K-9 members do not often meet-up physically, 
-  mostly using remote working tools to organise the project. However schedules meant that 
-  <a href="http://www.github.com/cketti">cketti</a> and <a href="http://www.github.com/philipwhiuk">philipwhiuk</a> 
-  were able to arrange a meet-up in Berlin this week - following on from previous meet-ups and hackathons between cketti 
+<p>As an internationally diverse team, K-9 members do not often meet-up physically,
+  mostly using remote working tools to organise the project. However schedules meant that
+  <a href="http://www.github.com/cketti">cketti</a> and <a href="http://www.github.com/philipwhiuk">philipwhiuk</a>
+  were able to arrange a meet-up in Berlin this week - following on from previous meet-ups and hackathons between cketti
   and <a href="http://www.github.com/Valodim">Valodim</a> earlier this year.</p>
 
-<p>The host organisation, <strong>c-base</strong> provides a group space for computer software, hardware and networking 
+<p>The host organisation, <strong>c-base</strong> provides a group space for computer software, hardware and networking
   and has previously hosted events for organisations like the Chaos Computer Club, Wikipedia and the Freifung wireless community.</p>
 
-<p style="font-size:smaller">Photo by Ralf Roletschek (marcela), 
-  <a href="http://creativecommons.org/licenses/by-sa/3.0" title="Creative Commons Attribution-Share Alike 3.0">CC BY-SA 3.0</a>, 
+<p style="font-size:smaller">Photo by Ralf Roletschek (marcela),
+  <a href="http://creativecommons.org/licenses/by-sa/3.0" title="Creative Commons Attribution-Share Alike 3.0">CC BY-SA 3.0</a>,
   <a href="https://commons.wikimedia.org/w/index.php?curid=2951445">Link</a></p>
