--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@ nav_hide: true
       </p>
       <div class="media-body">
         	<h1>
-    			Advanced Email for Android
+    			Advanced E-mail for Android
     		</h1>
     		<p>
     			<span style="color: inherit;">
-                K-9 Mail is an open source email client focused on making it easy to chew through large volumes of email</span>
+                K-9 Mail is a libre software e-mail client, focused on making it easy to chew through large volumes of e-mail</span>
     		</p>
     		<p>
     			<a href="{{site.url}}/about.html" class="btn btn-primary btn-large">Learn more »</a>
@@ -73,7 +73,7 @@ nav_hide: true
     			</h2>
     			<p>
 				K-9 Mail is a community developed project. If you're interested in helping to
-				make the best email client on Android even better, please join us!
+				make the best e-mail client on Android even better, please join us!
     			</p>
     			<p>
     				<a class="btn" href="{{site.url}}/contribute.html">More »</a>
