--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ nav_hide: true
 	<div class="row">
 		<div class="span12">
 			<h2>Blog Posts</h2>
-			  {% for post in site.posts %}
+			  {% for post in site.posts limit:3 %}
 			<div class="media">
 			  <div class="media-left">
 			  </div>
@@ -39,6 +39,7 @@ nav_hide: true
 			  </div>
 			</div>
 			  {% endfor %}
+      <a href="{{site.url}}/archive.html">View archived posts</a>
 		</div>
 	</div>
     	<!-- Example row of columns -->
