--- a/privacy.html
+++ b/privacy.html
@@ -20,7 +20,7 @@ title: Privacy Policy
         <p class="text-slate">The names and email addresses in the user's address book (contacts) are used to provide suggestions and auto-complete recipients when composing a message.</p>
         <p class="text-slate"><strong>Read from/write to Storage (Photos/Media/Files)</strong></p>
         <p class="text-slate">The storage area is used to save attachments or export app settings. It can also be used to import app settings or select files to attach to a message the user is composing.</p>
-        <p class="text-slate mt-4">For more information on the permissions K-9 Mail requires see: <a class="text-slate underline" href="/docs/permissions">Permissions</a>.</p>
+        <p class="text-slate mt-4">For more information on the permissions K-9 Mail requires see: <a class="text-slate underline" href="/documentation/permissions">Permissions</a>.</p>
       <p class="text-slate mb-4">Sensitive user information is only used to perform the basic functionality of the app, sending and receiving email. K-9 Mail does not automatically collect and send data to the developers of the app or any third party. Sensitive information is also not included in application logs unless this is enabled by the user.</p>
     </div>
 </div>
