--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
         {% for post in site.posts limit:3 %}
         <div class="col-12 col-lg-3 mb-3 mb-sm-3">
           <p class="mb-0 text-slate weight-700">{{ post.date | date: "%b %-d, %Y" }}</p>
-          <a href="{{ post.url }}" class="weight-500 underline text-slate-70">{{ post.title }}</a>
+          <a href="{{ post.url | replace:'.html','' }}" class="weight-500 underline text-slate-70">{{ post.title }}</a>
         </div>
         {% endfor %}
       </div>
