--- a/contribute.html
+++ b/contribute.html
@@ -10,14 +10,14 @@ title: Contribute
       <h1 class="text-slate">Contribute</h1>
     </div>
   </div>
-  
+
   <!-- Description Section -->
   <div class="container-fluid">
     <div class="container pt-4 pb-2">
       <p class="size-18 text-slate">Help us make K-9 Mail even better! Below you'll find several ways to contribute to the project, if you're a user, a developer, a translator, designer etc. or even if you just want to help financially by donating.</p>
     </div>
   </div>
-  
+
   <!-- Tabs Section -->
   <div class="container-fluid pt-3 pb-5">
     <div id="contributions" class="container px-0 card-border">
@@ -34,29 +34,29 @@ title: Contribute
 
           <div id="users" class="tabcontentservice">
             <h2 class="text-slate pb-3">Users</h2>
-            <h3 class="text-slate">Report a bug</p>
+            <h3 class="text-slate">Report a bug</h3>
             <p class="text-slate size-18 mb-0">Use the <a class="underline" href="https://github.com/k9mail/k-9/issues" target="_blank" rel="noopener">K-9 issue tracker</a> to report bugs or request new features.</p>
             <p class="text-slate size-18 pb-2">Use the <a class="underline" href="https://github.com/k9mail/k9mail.github.io/issues" target="_blank" rel="noopener">website issue tracker</a> to report bugs or request new features.</p>
-            
-            <h3 class="text-slate">Translate the app</p>
+
+            <h3 class="text-slate">Translate the app</h3>
             <p class="text-slate size-18 pb-2">K9 Mail uses <a class="underline" href="https://www.transifex.com/k-9/k9mail/" target="_blank" rel="noopener">Transifex</a> for translations. As features are added, there is often a need for translators to localise the text accordingly.</p>
 
-            <h3 class="text-slate">Help other users</p>
+            <h3 class="text-slate">Help other users</h3>
             <p class="text-slate size-18 pb-2">Help other users by answering questions on the <a class="underline" href="https://groups.google.com/forum/#!forum/k-9-mail" target="_blank" rel="noopener">mailing list</a>.</p>
           </div>
 
           <div id="developers" class="tabcontentservice">
             <h2 class="text-slate pb-3">Developers</h2>
-            <h3 class="text-slate">Get the source</p>
+            <h3 class="text-slate">Get the source</h3>
             <p class="text-slate size-18 pb-2">The <a class="underline" href="https://github.com/k9mail/k-9" target="_blank" rel="noopener">source code</a> is hosted on GitHub.</p>
-            
-            <h3 class="text-slate">Read the development documentation</p>
+
+            <h3 class="text-slate">Read the development documentation</h3>
             <p class="text-slate size-18 pb-2">We maintain documentation on the design of the app in the <a class="underline" href="/docs/development">development section</a> of the documentation and on the <a class="underline" href="https://github.com/k9mail/k-9/wiki" target="_blank" rel="noopener">Wiki</a>. Feel free to contribute towards this and read it to guide patches to submit. If you are new to Android then the <a class="underline" href="https://developer.android.com/training/index.html" target="_blank" rel="noopener">Android Developer site</a> has lots of helpful resources.</p>
 
-            <h3 class="text-slate">Finding issues to fix</p>
+            <h3 class="text-slate">Finding issues to fix</h3>
             <p class="text-slate size-18 pb-2">A number of the issues are marked with the ‘<a class="underline" href="https://groups.google.com/forum/#!forum/k-9-mail" target="_blank" rel="noopener">beginner</a>’ label indicating they are probably suitable for someone with not much experience of K-9.</p>
 
-            <h3 class="text-slate">Developing and submitting a patch</p>
+            <h3 class="text-slate">Developing and submitting a patch</h3>
             <ul class="pb-2">
                 <li class="text-slate size-18">The <a class="underline" href="https://github.com/k9mail/k-9/wiki/BuildingK9" target="_blank" rel="noopener">BuildingK9</a> page has information on how to build K-9. It’s important you run the tests (especially ones related to code you have directly changed) before submitting your code label indicating they are probably suitable for someone with not much experience of K-9.</li>
                 <li class="text-slate size-18">See the <a class="underline" href="https://github.com/k9mail/k-9/wiki/CodeStyle" target="_blank" rel="noopener">Code Style</a> for information on formatting your code so it matches our style.</li>
@@ -68,21 +68,21 @@ title: Contribute
             <h2 class="text-slate">Documentation</h2>
             <p class="text-slate size-18 pb-2">Like everything else, this manual is the work of volunteers. If you feel it could be improved with information on a certain topic, feel free to contribute by <a class="underline" href="https://github.com/k9mail/k9mail.github.io/issues" target="_blank" rel="noopener">creating an issue on the website’s tracker</a> or submitting a pull request.</p>
           </div>
-  
+
           <div id="donation" class="tabcontentservice">
             <h2 class="text-slate">Donation</h2>
-            <p class="text-slate size-18 pb-2">If you feel like contributing financially, please make a donation to <a class="underline" href="https://f-droid.org/about/" target="_blank" rel="noopener">F-Droid</a>, the repository of Free and Open Source Software (FOSS) for the Android platform.</p>
+            <p class="text-slate size-18 pb-2">If you want to contribute financially, head over to <a class="underline" href="https://liberapay.com/k9mail" target="_blank" rel="noopener">K-9 Mail's page on Liberapay</a>.</p>
           </div>
 
         </div>
       </div>
     </div>
   </div>
-  
+
   <!-- Tabs Code -->
   <script>
     document.getElementById("button-users").click();
-  
+
     function service(evt, type) {
       // Declare all variables
       var i, tabcontentservice, tablinkservice;
@@ -101,7 +101,7 @@ title: Contribute
       evt.currentTarget.className += " active";
     }
   </script>
-  
+
   <script>
   window.onhashchange = function() {
   var hash = location.hash.substr(1);
