better F-Droid dowload description
Also use the modern package url format

--- a/download.html
+++ b/download.html
@@ -25,10 +25,10 @@ title: Download
           </a>
         </div>
         <div class="col mx-3 gallery-item project-card full-width-sm">
-          <a class="text-dark" target="_blank" rel="noopener" href="https://f-droid.org/repository/browse/?fdid=com.fsck.k9">
+          <a class="text-dark" target="_blank" rel="noopener" href="https://f-droid.org/packages/com.fsck.k9/">
             <i class="fab fa-android size-36 text-teal mb-3"></i>
             <h3 class="text-slate weight-700">F-Droid</h3>
-            <p>Slower but recommended source of download, built by F-Droid.</p>
+            <p>Get it via the free F-Droid app store, built from source by F-Droid.</p>
           </a>
         </div>
       </div>
