Point to the forum instead of the mailing list

--- a/community.html
+++ b/community.html
@@ -18,10 +18,10 @@ title: Community
       <p class="mb-0 size-18">There are a couple of ways to interact with the K-9 Mail community. Below you'll find the mailing lists:</p>
       <div class="row justify-content-between pt-4">
         <div class="col mx-3 gallery-item project-card full-width-sm">
-          <a class="text-dark" target="_blank" rel="noopener" href="https://groups.google.com/forum/#!forum/k-9-mail">
+          <a class="text-dark" target="_blank" rel="noopener" href="https://forum.k9mail.app/">
             <i class="fas fa-comment-dots size-36 text-teal mb-3"></i>
-            <h3 class="text-slate weight-700">General Purpose</h3>
-            <p>If you have any questions related to K-9 Mail this list is the right place to ask.</p>
+            <h3 class="text-slate weight-700">Support Forum</h3>
+            <p>If you have any questions related to K-9 Mail this forum is the right place to ask.</p>
           </a>
         </div>
         <div class="col mx-3 gallery-item project-card full-width-sm">
