--- a/contribute.html
+++ b/contribute.html
@@ -42,7 +42,7 @@ title: Contribute
             <p class="text-slate size-18 pb-2">K9 Mail uses <a class="underline" href="https://www.transifex.com/k-9/k9mail/" target="_blank" rel="noopener">Transifex</a> for translations. As features are added, there is often a need for translators to localise the text accordingly.</p>
 
             <h3 class="text-slate">Help other users</h3>
-            <p class="text-slate size-18 pb-2">Help other users by answering questions on the <a class="underline" href="https://groups.google.com/forum/#!forum/k-9-mail" target="_blank" rel="noopener">mailing list</a>.</p>
+            <p class="text-slate size-18 pb-2">Help other users by answering questions over at the <a class="underline" href="https://forum.k9mail.app/" target="_blank" rel="noopener">support forum</a>.</p>
           </div>
 
           <div id="developers" class="tabcontentservice">
