Fix 'Finding issues to fix' section

--- a/contribute.html
+++ b/contribute.html
@@ -54,7 +54,7 @@ title: Contribute
             <p class="text-slate size-18 pb-2">We maintain documentation on the design of the app in the <a class="underline" href="/documentation/development">development section</a> of the documentation and on the <a class="underline" href="https://github.com/k9mail/k-9/wiki" target="_blank" rel="noopener">Wiki</a>. Feel free to contribute towards this and read it to guide patches to submit. If you are new to Android then the <a class="underline" href="https://developer.android.com/training/index.html" target="_blank" rel="noopener">Android Developer site</a> has lots of helpful resources.</p>
 
             <h3 class="text-slate">Finding issues to fix</h3>
-            <p class="text-slate size-18 pb-2">A number of the issues are marked with the ‘<a class="underline" href="https://groups.google.com/forum/#!forum/k-9-mail" target="_blank" rel="noopener">beginner</a>’ label indicating they are probably suitable for someone with not much experience of K-9.</p>
+            <p class="text-slate size-18 pb-2">A number of the issues are marked with the ‘<a class="underline" href="https://github.com/k9mail/k-9/labels/good%20first%20issue" target="_blank" rel="noopener">good first issue</a>’ label indicating they are suitable for someone new to K-9 Mail's code base.</p>
 
             <h3 class="text-slate">Developing and submitting a patch</h3>
             <ul class="pb-2">
