Update active team members

--- a/team.html
+++ b/team.html
@@ -13,7 +13,7 @@ title: Team
 <!-- Description Section -->
 <div class="container-fluid">
     <div class="container pt-4 pb-2">
-      <p class="size-18 text-slate">K-9 wouldn’t be where it is today without the team behind it who have contributed design, code and ideas.</p>
+      <p class="size-18 text-slate">K-9 Mail wouldn’t be where it is today without the team behind it who have contributed design, code and ideas.</p>
     </div>
 </div>
 
@@ -22,9 +22,9 @@ title: Team
       <h2 class="text-slate">Active Team Members</h2>
       <ul class="text-slate">
           <li>cketti - Project lead</li>
+          <li>ByteHamster</li>
           <li>Valodim</li>
           <li>dschuermann</li>
-          <li>philipwhiuk</li>
       </ul>
       <h2 class="text-slate pt-2">Project Members</h2>
       <ul class="text-slate">
@@ -45,6 +45,7 @@ title: Team
           <li>m0vie</li>
           <li>maniac103</li>
           <li>MarcusWolschon</li>
+          <li>philipwhiuk</li>
           <li>rabcyr</li>
           <li>rafl</li>
           <li>swapsmagic</li>
