--- a/team.html
+++ b/team.html
@@ -4,30 +4,30 @@ title: Team
 ---
 
 <!-- Top Header Section -->
-<div class="container-fluid background-teal">
+<div class="container-fluid background">
     <div class="container py-3">
-      <h1 class="text-slate">Team</h1>
+      <h1 class="text-main">Team</h1>
     </div>
 </div>
 
 <!-- Description Section -->
 <div class="container-fluid">
     <div class="container pt-4 pb-2">
-      <p class="size-18 text-slate">K-9 Mail wouldn’t be where it is today without the team behind it who have contributed design, code and ideas.</p>
+      <p class="size-18 text-main">K-9 Mail wouldn’t be where it is today without the team behind it who have contributed design, code and ideas.</p>
     </div>
 </div>
 
 <div class="container-fluid">
     <div class="container pt-2 pb-5">
-      <h2 class="text-slate">Active Team Members</h2>
-      <ul class="text-slate">
+      <h2 class="text-main">Active Team Members</h2>
+      <ul class="text-main">
           <li>cketti - Project lead</li>
           <li>ByteHamster</li>
           <li>Valodim</li>
           <li>dschuermann</li>
       </ul>
-      <h2 class="text-slate pt-2">Project Members</h2>
-      <ul class="text-slate">
+      <h2 class="text-main pt-2">Project Members</h2>
+      <ul class="text-main">
           <li>obra - Founder and former project lead</li>
           <li>danapple</li>
           <li>zjw</li>
@@ -54,8 +54,8 @@ title: Team
           <li>xperimental</li>
           <li>zjw</li>
       </ul>
-      <h2 class="text-slate pt-2">Other Contributors</h2>
-      <ul class="text-slate">
+      <h2 class="text-main pt-2">Other Contributors</h2>
+      <ul class="text-main">
         <li>dnet</li>
         <li>ismarc</li>
         <li>andrewgaul</li>
