--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@ layout: page
 
   <img class="py-4" src="/assets/img/404.svg" width="300px" height="auto" alt="404 Error" />
 
-  <p class="text-slate"><strong>Page not found :(</strong></p>
-  <p class="text-slate">The requested page could not be found.</p>
+  <p class="text-main"><strong>Page not found :(</strong></p>
+  <p class="text-main">The requested page could not be found.</p>
 </div>
 </div>
