--- a/community.html
+++ b/community.html
@@ -5,9 +5,9 @@ title: Community
 
 <!-- Top Header Section -->
 
-<div class="container-fluid background-teal">
+<div class="container-fluid background">
     <div class="container py-3">
-      <h1 class="text-slate">Community</h1>
+      <h1 class="text-main">Community</h1>
     </div>
 </div>
   
@@ -20,14 +20,14 @@ title: Community
         <div class="col mx-3 gallery-item project-card full-width-sm">
           <a class="text-dark" target="_blank" rel="noopener" href="https://forum.k9mail.app/">
             <i class="fas fa-comment-dots size-36 text-teal mb-3"></i>
-            <h3 class="text-slate weight-700">Support Forum</h3>
+            <h3 class="text-main weight-700">Support Forum</h3>
             <p>If you have any questions related to K-9 Mail this forum is the right place to ask.</p>
           </a>
         </div>
         <div class="col mx-3 gallery-item project-card full-width-sm">
           <a class="text-dark" target="_blank" rel="noopener" href="https://groups.google.com/forum/#!forum/k-9-dev">
             <i class="fas fa-code size-36 text-teal mb-3"></i>
-            <h3 class="text-slate weight-700">Dev Talk</h3>
+            <h3 class="text-main weight-700">Dev Talk</h3>
             <p>For development talk, the developer mailing list is a low-traffic list covering broad development issues.</p>
           </a>
         </div>
@@ -39,14 +39,14 @@ title: Community
         <div class="col mx-3 gallery-item project-card full-width-sm">
             <a class="text-dark" target="_blank" rel="noopener" href="https://webchat.freenode.net/?channels=#k-9">
               <i class="fas fa-comments size-36 text-teal mb-3"></i>
-              <h3 class="text-slate weight-700">IRC</h3>
+              <h3 class="text-main weight-700">IRC</h3>
               <p>Many of the developers use IRC to chat in real-time. You can find them on the Freenode network, channel #k-9</p>
             </a>
           </div>
         <div class="col mx-3 gallery-item project-card full-width-sm">
           <a class="text-dark" target="_blank" rel="noopener" href="https://github.com/k9mail/k-9/issues">
             <i class="fab fa-github size-36 text-teal mb-3"></i>
-            <h3 class="text-slate weight-700">GitHub Bug Tracker</h3>
+            <h3 class="text-main weight-700">GitHub Bug Tracker</h3>
             <p>Use the issue tracker to report bugs or request new features.</p>
           </a>
         </div>
