--- a/documentation.html
+++ b/documentation.html
@@ -5,9 +5,9 @@ permalink: /documentation/
 ---
 
 <!-- Top Header Section -->
-<div class="container-fluid background-teal">
+<div class="container-fluid background">
     <div class="container py-3">
-      <h1 class="text-slate">Documentation</h1>
+      <h1 class="text-main">Documentation</h1>
     </div>
 </div>
 
@@ -15,11 +15,11 @@ permalink: /documentation/
   
 <div class="container-fluid">
     <div class="container pt-4">
-      <p class="text-slate mb-3">Welcome to the documentation section of the K-9 Mail website.</p>
-      <p class="text-slate">This section aims to provide information on current features (and give some pointers on future direction where possible). However as a living project, the section is a constant work-in-progress and is often developed along-side / after the features themselves.</p>
-      <p class="text-slate">Changes are documented in the <a class="text-slate underline" href="../k-9/changelog_5.4-MAINT_branch.xml">release notes</a> distributed with the app.</p>
-      <p class="text-slate mb-2">Upcoming changes are listed in the beta's <a class="text-slate underline" href="../k-9/changelog_master_branch.xml">release notes</a> distributed along with the beta.</p>
-      <p class="text-slate mb-4">If you have any comments please feel free to <a class="text-slate underline" href="../contribute">provide feedback</a>.</p>
+      <p class="text-main mb-3">Welcome to the documentation section of the K-9 Mail website.</p>
+      <p class="text-main">This section aims to provide information on current features (and give some pointers on future direction where possible). However as a living project, the section is a constant work-in-progress and is often developed along-side / after the features themselves.</p>
+      <p class="text-main">Changes are documented in the <a class="text-main underline" href="../k-9/changelog_5.4-MAINT_branch.xml">release notes</a> distributed with the app.</p>
+      <p class="text-main mb-2">Upcoming changes are listed in the beta's <a class="text-main underline" href="../k-9/changelog_master_branch.xml">release notes</a> distributed along with the beta.</p>
+      <p class="text-main mb-4">If you have any comments please feel free to <a class="text-main underline" href="../contribute">provide feedback</a>.</p>
 
       <input type="text" id="search-input" placeholder="Search documentation...">
       <ul class="pt-3" id="results-container"></ul>
@@ -34,8 +34,8 @@ permalink: /documentation/
         <div class="col-12 col-md-3 mb-3 mb-md-3">
             <a href="{{ documentation.url | replace:'.html','' }}">
           <div class="card shadow-sm project-card">
-                <i class="{{ documentation.icon }} size-36 text-teal mb-3"></i>
-                <h4 class="text-slate weight-700">{{ documentation.title }}</h4>
+                <i class="{{ documentation.icon }} size-36 text-main mb-3"></i>
+                <h4 class="text-main weight-700">{{ documentation.title }}</h4>
           </div>
         </a>
         </div>
