Fixed header background color

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: About
 ---
 
 <!-- Top Header Section -->
-<div class="container-fluid background-teal">
+<div class="container-fluid background">
     <div class="container py-3">
       <h1 class="text-main">About</h1>
     </div>
