--- a/community.html
+++ b/community.html
@@ -15,7 +15,7 @@ title: Community
   
 <div class="container-fluid">
     <div id="mailing-lists" class="container pt-4 pb-1">
-      <p class="mb-0 size-18">There are a couple of ways to interact with the K-9 Mail community. Below you'll find the mailing lists:</p>
+      <p class="mb-0 size-18">There are a couple of ways to interact with the K-9 Mail community:</p>
       <div class="row justify-content-between pt-4">
         <div class="col mx-3 gallery-item project-card full-width-sm">
           <a class="text-dark" target="_blank" rel="noopener" href="https://forum.k9mail.app/">
@@ -25,24 +25,14 @@ title: Community
           </a>
         </div>
         <div class="col mx-3 gallery-item project-card full-width-sm">
-          <a class="text-dark" target="_blank" rel="noopener" href="https://groups.google.com/forum/#!forum/k-9-dev">
-            <i class="fas fa-code size-36 text-main mb-3"></i>
-            <h3 class="text-main weight-700">Dev Talk</h3>
-            <p>For development talk, the developer mailing list is a low-traffic list covering broad development issues.</p>
+          <a class="text-dark" target="_blank" rel="noopener" href="https://matrix.to/#/#k9mail:matrix.org">
+            <i class="fas fa-comments size-36 text-main mb-3"></i>
+            <h3 class="text-main weight-700">Matrix</h3>
+            <p>Join our Matrix room to chat about K-9 Mail in real-time.</p>
           </a>
         </div>
       </div>
-    </div>
-    <div id="channels" class="container pt-2 pb-3">
-     <p class="mb-0 size-18">Apart from the mailing lists, you can find us on IRC and GitHub:</p>
-     <div class="row justify-content-between pt-4 pb-3">
-        <div class="col mx-3 gallery-item project-card full-width-sm">
-            <a class="text-dark" target="_blank" rel="noopener" href="https://webchat.freenode.net/?channels=#k-9">
-              <i class="fas fa-comments size-36 text-main mb-3"></i>
-              <h3 class="text-main weight-700">IRC</h3>
-              <p>Many of the developers use IRC to chat in real-time. You can find them on the Freenode network, channel #k-9</p>
-            </a>
-          </div>
+      <div class="row justify-content-between pt-1 pb-3">
         <div class="col mx-3 gallery-item project-card full-width-sm">
           <a class="text-dark" target="_blank" rel="noopener" href="https://github.com/k9mail/k-9/issues">
             <i class="fab fa-github size-36 text-main mb-3"></i>
@@ -50,6 +40,13 @@ title: Community
             <p>Use the issue tracker to report bugs or request new features.</p>
           </a>
         </div>
+        <div class="col mx-3 gallery-item project-card full-width-sm">
+          <a class="text-dark" target="_blank" rel="noopener" href="https://github.com/k9mail/k-9/discussions">
+            <i class="fas fa-code size-36 text-main mb-3"></i>
+            <h3 class="text-main weight-700">GitHub Discussions</h3>
+            <p>For questions and discussions around K-9 Mail development.</p>
+          </a>
+        </div>
       </div>
     </div>
-  </div>
+</div>
